# react-django-examples

./: .gitignore  README.md
notes/: README.md  docker-compose.yml
notes/backend/: .dockerignore  Dockerfile  pyproject.toml
notes/backend/.devcontainer/: Dockerfile  devcontainer.json
notes/backend/project/project/: settings.py  urls.py
notes/backend/project/todo/: models.py  urls.py  views.py
notes/backend/project/todo/migrations/: 0001_initial.py
notes/frontend/frontend/: Dockerfile  package-lock.json  package.json
notes/frontend/frontend/src/: App.css  App.js
notes/frontend/frontend/src/components/: TodoList.js
notes/frontend/frontend/src/components/Navbar/: Navbar.css  Navbar.js
notes/frontend/frontend/src/components/form/: Form.css  Form.js
notes/frontend/frontend/src/components/modal/: modal.css  modal.js
