[tool.poetry]
name = "noteapp"
version = "0.1.0"
description = "A backend for simple notesapp"
authors = ["Starndardio <israelrescalvo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
